# agent-flight

./: .gitignore  LICENSE  Linkedin.md  README.md  flight.py  pyproject.toml
.github/workflows/: test.yml
adapters/: make_test_traces.py
assets/: demo.cast  demo.sh
docs/: STRANGER_TEST.md  flight-format.md
examples/: auth-failure-bad.flight  auth-failure-good.flight  long-chain-bad.flight  long-chain-good.flight  model-change-bad.flight  model-change-good.flight  prompt-change-bad.flight  prompt-change-good.flight  tool-args-bad.flight  tool-args-good.flight
tests/: test_diff.py
tests/fixtures/: deep_divergence_bad.flight  deep_divergence_good.flight  model_change_bad.flight  model_change_good.flight  prompt_change_bad.flight  prompt_change_good.flight  pure_behavior_bad.flight  pure_behavior_good.flight  tool_args_bad.flight  tool_args_good.flight
