[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flight"
version = "0.0.1"
description = "git blame for AI runs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Rudra Patra", email = "rudran.patra@yahoo.com" },
]
keywords = ["agent", "ai", "diff", "trace", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
flight = "flight:main"

[project.urls]
Repository = "https://github.com/rudranpatra/agent-flight"

[tool.setuptools]
py-modules = ["flight"]
